# Anya

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  resource.rc  vcpkg.json
assets/: assets.rar
src/: animation.cpp  animation.hpp  anya.cpp  anya.hpp  config.hpp  data.hpp  image.cpp  image.hpp  main.cpp  mbstyle.cpp  scene.hpp  scene.inl  uinterface.cpp  uinterface.hpp  util.hpp
